docs: upgrade Chinese documentation suite and add runbooks